--- a/angular.json
+++ b/angular.json
@@ -23,9 +23,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
-              "src/assets/libs/bootstrap.min-2.css"
-
+              "src/assets/libs/bootstrap.min-2.css",
+              "src/styles.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
